hw4/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-hw4-app-deployment
  namespace: msa-hw4-ns
  labels:
    app: msa-hw4-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msa-hw4-app
  template:
    metadata:
      labels:
        app: msa-hw4-app
    spec:
      containers:
      - name: msa-hw4-app-container
        image: restwin/msa-hw4:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
